# Raspberry-PiProjects

.cache/clangd/index/: main.c.4026E4A63344CD90.idx
CoAP/: CMakeLists.txt  coap-client-imd.c  coap-server-imd.c
CoAP/.cache/clangd/index/: coap-client-imd.c.71DAEBE89BB29FB6.idx  coap-server-imd.c.C178FB63D37720CD.idx
Intro/: CMakeLists.txt  main.c
SocketsI/: SocketsI_README.md  daytimeTCPCli  daytimeTCPCli.c  daytimeTCPSrv  daytimeTCPSrv.c  daytimeUDPCli  daytimeUDPCli.c  daytimeUDPSrv  daytimeUDPSrv.c
SocketsII/: hwctlCli  hwctlCli.c  hwctlSrv  hwctlSrv.c
led_control/: README.md  led_control  led_control.c  terminal_commands.sh
